fix: added z-index

--- a/html/Floma/public/css/style.css
+++ b/html/Floma/public/css/style.css
@@ -218,7 +218,7 @@ header .sidenav {
   padding: 1.25rem;
   gap: 1.563rem;
   box-sizing: border-box;
-  z-index: 1000;
+  z-index: 100;
 }
 
 header .logo {
